Report bit-error rates from links with RS FEC enabled
- Add ASIC-layer methods for reporting the BER from an ASIC port
- Export Tofino2 functions and types for reading BER out of the PHY
- Add `dpd` and `swadm` interfaces for extracting the BER and printing
  it
